--- a/Freelance-Project-Finder/src/main/resources/templates/createProject.html
+++ b/Freelance-Project-Finder/src/main/resources/templates/createProject.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Реєстрація</title>
+    <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -40,29 +40,29 @@
         </div>
     </div>
 </nav>
-<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;">
-    <h1 style="font-family: 'Roboto', sans-serif; font-size: 2rem; margin-bottom: 2rem;">Реєстрація</h1>
-    <form th:action="@{/registration}" method="post"
+<div style="display: flex; flex-direction: column; justify-content: center; align-items: center  ; height: 100vh;">
+    <h1 style="font-family: 'Roboto', sans-serif; font-size: 2rem; margin-bottom: 2rem;">Створення проекту</h1>
+    <form th:action="@{/projects/create}" method="post"
           style="display: flex; flex-direction: column; align-items: center; padding: 1.5rem; border-radius: 1rem; box-shadow: 0 0.25rem 0.5rem rgba(38, 50, 56, 0.07), 0 0.125rem 0.125rem rgba(38, 50, 56, 0.03); background-color: #fff;">
-        <label style="font-family: 'Roboto', sans-serif; font-size: 1.2rem; font-weight: bold; margin-right: auto; margin-bottom: 0.5rem;">Прізвище:</label>
-        <input name="lastName" type="text" placeholder="Прізвище"
+        <label style="font-family: 'Roboto', sans-serif; font-size: 1.2rem; font-weight: bold; margin-right: auto; margin-bottom: 0.5rem;">Назва:</label>
+        <input name="title" type="text" placeholder="Назва"
                style="padding: 0.8rem 1rem; font-size: 1.2rem; border: 0.1rem solid #c2c2c2; border-radius: 1rem; margin-bottom: 1rem; width: 25rem;"
                required>
-        <label style="font-family: 'Roboto', sans-serif; font-size: 1.2rem; font-weight: bold; margin-right: auto; margin-bottom: 0.5rem;">Ім'я:</label>
-        <input name="firstName" type="text" placeholder="Ім'я"
+        <label style="font-family: 'Roboto', sans-serif; font-size: 1.2rem; font-weight: bold; margin-right: auto; margin-bottom: 0.5rem;">Відкритий опис:</label>
+        <input name="openedDescription" type="text" placeholder="Відкритий опис"
                style="padding: 0.8rem 1rem; font-size: 1.2rem; border: 0.1rem solid #c2c2c2; border-radius: 1rem; margin-bottom: 1rem; width: 25rem;"
                required>
-        <label style="font-family: 'Roboto', sans-serif; font-size: 1.2rem; font-weight: bold; margin-right: auto; margin-bottom: 0.5rem;">Пошта:</label>
-        <input name="email" type="email" placeholder="пошта"
+        <label style="font-family: 'Roboto', sans-serif; font-size: 1.2rem; font-weight: bold; margin-right: auto; margin-bottom: 0.5rem;">Закритий опис:</label>
+        <input name="closedDescription" type="text" placeholder="Закритий опис"
                style="padding: 0.8rem 1rem; font-size: 1.2rem; border: 0.1rem solid #c2c2c2; border-radius: 1rem; margin-bottom: 1rem; width: 25rem;"
                required>
-        <label style="font-family: 'Roboto', sans-serif; font-size: 1.2rem; font-weight: bold; margin-right: auto; margin-bottom: 0.5rem;">Пароль:</label>
-        <input name="password" type="password" placeholder="пароль"
+        <label style="font-family: 'Roboto', sans-serif; font-size: 1.2rem; font-weight: bold; margin-right: auto; margin-bottom: 0.5rem;">Бюджет:</label>
+        <input name="budget" type="number" placeholder="Бюджет"
                style="padding: 0.8rem 1rem; font-size: 1.2rem; border: 0.1rem solid #c2c2c2; border-radius: 1rem; margin-bottom: 1rem; width: 25rem;"
                required>
         <button type="submit"
                 style="padding: 0.8rem 2rem; font-size: 1.2rem; border-radius: 1rem; background-color: #1976d2; color: #fff; box-shadow: 0 0.25rem 0.5rem rgba(144, 202, 249, 1), 0 0.125rem 0.125rem rgba(144, 202, 249, 0.5); border: none;">
-            Зареєструватися
+            Створити проект
         </button>
     </form>
 </div>
