--- a/Freelance-Project-Finder/src/main/resources/templates/index.html
+++ b/Freelance-Project-Finder/src/main/resources/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.w3.org/1999/xhtml"
-      xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,46 +16,7 @@
     <title>Головна сторінка</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-md">
-    <div class="container-fluid">
-        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/"
-                       style="font-family: 'Roboto', sans-serif; font-weight: bold;">Проекти</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/mentors" style="font-family: 'Roboto', sans-serif; font-weight: bold;">Ментори</a>
-                </li>
-                <li class="nav-item" th:if="${isAuth != null}">
-                    <a class="nav-link" href="/projects/create"
-                       style="font-family: 'Roboto', sans-serif; font-weight: bold;" sec:authorize="isAuthenticated()">
-                        Створити проект</a>
-                </li>
-            </ul>
-        </div>
-        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item" th:if="${isAuth == null}">
-                    <a class="nav-link" href="/login"
-                       style="font-family: 'Roboto', sans-serif; font-weight: bold;">Вхід</a>
-                </li>
-                <li class="nav-item" th:if="${isAuth == null}">
-                    <a class="nav-link" href="/registration"
-                       style="font-family: 'Roboto', sans-serif; font-weight: bold;">Реєстрація</a>
-                </li>
-                <li class="nav-item" th:if="${isAuth != null}">
-                    <a class="nav-link" href="/profile"
-                       style="font-family: 'Roboto', sans-serif; font-weight: bold;">Профіль</a>
-                </li>
-                <li class="nav-item" th:if="${isAuth != null}">
-                    <a class="nav-link" href="/logout"
-                       style="font-family: 'Roboto', sans-serif; font-weight: bold;">Вихід</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<header th:insert="base.html :: header"></header>
 <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 90vh;">
     <div th:each="project: ${projects}"
          style="display: flex; flex-direction: column; padding: 1.5rem; border-radius: 1rem; box-shadow: 0 0.25rem 0.5rem rgba(38, 50, 56, 0.07), 0 0.125rem 0.125rem rgba(38, 50, 56, 0.03); background-color: #fff; width: 50vw; margin: 5px;">
