--- a/Freelance-Project-Finder/src/main/resources/templates/login.html
+++ b/Freelance-Project-Finder/src/main/resources/templates/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Вхід</title>
@@ -17,30 +16,7 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-md">
-    <div class="container-fluid">
-        <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/" style="font-family: 'Roboto', sans-serif; font-weight: bold;">Проекти</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/mentors" style="font-family: 'Roboto', sans-serif; font-weight: bold;">Ментори</a>
-                </li>
-            </ul>
-        </div>
-        <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/login" style="font-family: 'Roboto', sans-serif; font-weight: bold;">Вхід</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/registration" style="font-family: 'Roboto', sans-serif; font-weight: bold;">Реєстрація</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<header th:insert="base.html :: header"></header>
 <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;">
     <h1 style="font-family: 'Roboto', sans-serif; font-size: 2rem; margin-bottom: 2rem;">Вхід</h1>
     <form th:action="@{/login}" method="post"
