--- a/Freelance-Project-Finder/src/main/resources/templates/mentors.html
+++ b/Freelance-Project-Finder/src/main/resources/templates/mentors.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<header th:insert="base.html :: header"></header>
 
 </body>
 </html>
